@@ -3,6 +3,7 @@ package com.fersoft.hashing;
 import com.fersoft.signature.StarkCurve;
 import org.bouncycastle.math.ec.ECPoint;
 import java.math.BigInteger;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -13,7 +14,8 @@ import java.util.List;
  */
 public final class ConstantPoints {
     private static final StarkCurve curve = StarkCurve.getInstance();
-    public static final List<ECPoint> POINTS = List.of(
+
+    public static final List<ECPoint> POINTS = Arrays.asList(
             curve.createPoint(
                     new BigInteger("49ee3eba8c1600700ee1b87eb599f16716b0b1022947733551fde4050ca6804", 16),
                     new BigInteger("3ca0cfe4b3bc6ddf346d49d06ea0ed34e621062c0e056c1d0405d266e10268a", 16)),
